--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/extra_weather_details.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/extra_weather_details.xml
@@ -16,7 +16,7 @@
 -->
 <!-- TODO (4) Color the background and label text color appropriately -->
 <!-- COMPLETED (5) Replace dimension values with @dimen resources -->
-<!-- TODO (6) Use sans-serif font family for label TextViews -->
+<!-- COMPLETED (6) Use sans-serif font family for label TextViews -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
@@ -45,6 +45,7 @@
             android:id="@+id/humidity_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:text="@string/humidity_label"
             app:layout_constraintBottom_toTopOf="@+id/pressure_label"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
@@ -65,6 +66,7 @@
             android:id="@+id/pressure_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:text="@string/pressure_label"
             app:layout_constraintBottom_toBottomOf="@+id/extra_details"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
@@ -84,6 +86,7 @@
             android:id="@+id/wind_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:text="@string/wind_label"
             app:layout_constraintBottom_toBottomOf="@+id/extra_details"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
