--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/forecast_list_item.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/forecast_list_item.xml
@@ -17,7 +17,7 @@
 
 <!-- TODO (7) Color the primary and secondary text appropriately -->
 <!-- COMPLETED (8) Replace dimension values with @dimen resources -->
-<!-- TODO (9) Use sans-serif-light font family for the temperature TextViews -->
+<!-- COMPLETED (9) Use sans-serif-light font family for the temperature TextViews -->
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/forecast_temperature_space"
         android:layout_marginRight="@dimen/forecast_temperature_space"
+        android:fontFamily="sans-serif-light"
         android:textSize="@dimen/forecast_text_size"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/low_temperature"
@@ -76,6 +77,7 @@
         android:layout_width="@dimen/list_item_low_temperature_text_view_size"
         android:layout_height="wrap_content"
         android:gravity="end"
+        android:fontFamily="sans-serif-light"
         android:textSize="@dimen/forecast_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/guideline"
         app:layout_constraintRight_toRightOf="parent"
