--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/list_item_forecast_today.xml
@@ -28,7 +28,7 @@
 <!-- TODO (10) Color the TextViews for weather data appropriately -->
 <!-- TODO (11) Color the background for today's weather data appropriately -->
 <!-- COMPLETED (12) Replace dimension values with @dimen resources -->
-<!-- TODO (13) Use sans-serif-light font family for the temperature TextViews -->
+<!-- COMPLETED (13) Use sans-serif-light font family for the temperature TextViews -->
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -110,6 +110,7 @@
         android:id="@+id/high_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
         android:textSize="@dimen/today_forecast_list_item_high_temperature_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
         app:layout_constraintHorizontal_bias="0.45"
@@ -131,6 +132,7 @@
         android:id="@+id/low_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
         android:textSize="@dimen/today_forecast_list_item_low_temperature_text_size"
         app:layout_constraintBaseline_toBaselineOf="@+id/weather_description"
         app:layout_constraintLeft_toLeftOf="@+id/high_temperature"
