--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/forecast_list_item.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/forecast_list_item.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 
-<!-- TODO (7) Color the primary and secondary text appropriately -->
+<!-- COMPLETED (7) Color the primary and secondary text appropriately -->
 <!-- COMPLETED (8) Replace dimension values with @dimen resources -->
 <!-- COMPLETED (9) Use sans-serif-light font family for the temperature TextViews -->
 <android.support.constraint.ConstraintLayout
@@ -55,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/secondary_text"
         app:layout_constraintLeft_toLeftOf="@+id/date"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         tools:text="Rainy"/>
@@ -66,6 +67,7 @@
         android:layout_marginEnd="@dimen/forecast_temperature_space"
         android:layout_marginRight="@dimen/forecast_temperature_space"
         android:fontFamily="sans-serif-light"
+        android:textColor="@color/primary_text"
         android:textSize="@dimen/forecast_text_size"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/low_temperature"
