--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/values/dimens.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/values/dimens.xml
@@ -10,9 +10,9 @@
     <dimen name="forecast_temperature_space">4dp</dimen>
     <dimen name="today_forecast_list_item_vertical_margin">8dp</dimen>
     <dimen name="today_forecast_list_item_vertical_padding">16dp</dimen>
-    <dimen name="today_forecast_list_item_weather_text_size">20sp</dimen>
-    <dimen name="today_forecast_list_item_high_temperature_text_size">72sp</dimen>
-    <dimen name="today_forecast_list_item_low_temperature_text_size">36sp</dimen>
+    <dimen name="today_forecast_list_item_weather_text_size">20dp</dimen>
+    <dimen name="today_forecast_list_item_high_temperature_text_size">72dp</dimen>
+    <dimen name="today_forecast_list_item_low_temperature_text_size">36dp</dimen>
     <dimen name="list_item_icon_margin_right">24dp</dimen>
     <dimen name="list_item_icon_margin_end">@dimen/list_item_icon_margin_right</dimen>
     <dimen name="list_item_padding_horizontal">16dp</dimen>
