--- a/S12.02-Exercise-Styles/app/src/main/res/values/styles.xml
+++ b/S12.02-Exercise-Styles/app/src/main/res/values/styles.xml
@@ -25,7 +25,11 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
-    <!-- TODO (1) Create a style that shows a Sunshine logo instead of a title -->
+    <!-- COMPLETED (1) Create a style that shows a Sunshine logo instead of a title -->
+    <style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="displayOptions">useLogo|showHome</item>
+        <item name="logo">@drawable/ic_logo</item>
+    </style>
 
     <!-- TODO (2) Create a style for MainActivity called AppTheme.Forecast that uses our custom ActionBar style -->
 
