--- a/S12.02-Exercise-Styles/app/src/main/res/layout/extra_weather_details.xml
+++ b/S12.02-Exercise-Styles/app/src/main/res/layout/extra_weather_details.xml
@@ -82,18 +82,15 @@
             tools:text="995 hPa"/>
 
         <!-- Wind label -->
-        <!-- TODO (10) Replace the appropriate attributes with the DetailLabel style -->
+        <!-- COMPLETED (10) Replace the appropriate attributes with the DetailLabel style -->
         <TextView
             android:id="@+id/wind_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
+            style="@style/DetailLabel"
             android:text="@string/wind_label"
-            android:textColor="@color/detail_accent_label"
             app:layout_constraintBottom_toBottomOf="@+id/extra_details"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
             app:layout_constraintTop_toBottomOf="@+id/pressure_label"
-            app:layout_constraintVertical_bias="0.65999997"/>
+            app:layout_constraintVertical_bias="0.65999997" />
 
         <!-- Wind measurement -->
         <!-- TODO (11) Replace the appropriate attributes with the ExtraWeatherMeasurement style -->
